<?xml version="1.0" encoding="utf-8"?> 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fondo1"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="40dp" >

	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/logo"
	    android:gravity="center"
	    android:padding="30dp"
	    android:text="@string/app_title"
	    android:textColor="#B9D3EE"
	    android:textSize="18dp" />

	<Button 
		android:text="@string/play"
		android:id="@+id/buttonPlay"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:textColor="#6C7B8B" 
   
	/>

	<Button 
		android:text="@string/config"
		android:id="@+id/buttonConfig"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent" 
		android:textColor="#6C7B8B" 
     
	/>
	<Button 
		android:text="@string/about"
		android:id="@+id/buttonAbout"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent" 
		android:textColor="#6C7B8B"   
 
	/>

	<Button
	    android:id="@+id/buttonPuntuacion"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/score"
	    android:textColor="#6C7B8B" />

</LinearLayout> 